--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "grunt": "~0.4.2",
     "grunt-contrib-uglify": "~0.3.1",
     "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-compress": "~0.6.0",
+    "grunt-remove": "~0.1.0"
   }
 }
